kubernetes/ingress-resources/web-app-ingress.yml
# webapp-ingress
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: webapp
  annotations:
    kubernetes.io/ingress.class: nginx
    # # type of authentication
    # nginx.ingress.kubernetes.io/auth-type: basic
    # # name of the secret that contains the user/password definitions
    # nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # # message to display with an appropriate context why the authentication is required
    # nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - mothes'
spec:
  rules:
  - host: webapp.linuxspace.org
    http:
      paths:
      - path: /
        backend:
          serviceName: simple-web-app-svc
          servicePort: 8181
